native_audio/frb_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
void store_dart_post_cobject(DartPostCObjectFnType ptr);
typedef struct wire_cst_list_prim_u_8_loose {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_loose;
typedef struct wire_cst_list_prim_i_16_loose {
  int16_t *ptr;
  int32_t len;
} wire_cst_list_prim_i_16_loose;
typedef struct wire_cst_list_prim_f_32_loose {
  float *ptr;
  int32_t len;
} wire_cst_list_prim_f_32_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_dart_transcription {
  struct wire_cst_list_dart_transcription_segment *segments;
  struct wire_cst_list_prim_u_8_strict *language;
  float duration;
  uint64_t processing_time_ms;
  struct wire_cst_list_prim_u_8_strict *full_text;
} wire_cst_dart_transcription;
typedef struct wire_cst_dart_voice_style {
  struct wire_cst_list_prim_u_8_strict *id;
  struct wire_cst_list_prim_u_8_strict *name;
  struct wire_cst_list_prim_u_8_strict *description;
  float rate;
  float pitch;
} wire_cst_dart_voice_style;
typedef struct wire_cst_dart_vad_result {
  int32_t state;
  float speech_probability;
  bool is_speech;
  float state_duration;
} wire_cst_dart_vad_result;
typedef struct wire_cst_streaming_result {
  struct wire_cst_dart_vad_result vad;
  bool transcription_attempted;
  struct wire_cst_dart_transcription *transcription;
} wire_cst_streaming_result;
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_available(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_available_duration(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_clear(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_has_full_chunk(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_read(uintptr_t count);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_read_all(void);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_write_bytes(struct wire_cst_list_prim_u_8_loose *bytes);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_write_i16(struct wire_cst_list_prim_i_16_loose *samples);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__audio_buffer_write_samples(struct wire_cst_list_prim_f_32_loose *samples);
void frbgen_kivixa_wire__crate__api__audio_initialize_all(int64_t port_);