lib/src/rust_audio/frb_generated.io.dart


  @protected
  void cst_api_fill_to_wire_dart_vad_result(
    DartVadResult apiObj,
    wire_cst_dart_vad_result wireObj,
  ) {
    wireObj.state = cst_encode_i_32(apiObj.state);
    wireObj.speech_probability = cst_encode_f_32(apiObj.speechProbability);
    wireObj.is_speech = cst_encode_bool(apiObj.isSpeech);
    wireObj.state_duration = cst_encode_f_32(apiObj.stateDuration);
  }

  @protected
  void cst_api_fill_to_wire_dart_voice_style(
    DartVoiceStyle apiObj,
    wire_cst_dart_voice_style wireObj,
  ) {
    wireObj.id = cst_encode_String(apiObj.id);
    wireObj.name = cst_encode_String(apiObj.name);
    wireObj.description = cst_encode_String(apiObj.description);
    wireObj.rate = cst_encode_f_32(apiObj.rate);
    wireObj.pitch = cst_encode_f_32(apiObj.pitch);
  }

  @protected
  void cst_api_fill_to_wire_streaming_result(
    StreamingResult apiObj,
    wire_cst_streaming_result wireObj,
  ) {
    cst_api_fill_to_wire_dart_vad_result(apiObj.vad, wireObj.vad);
    wireObj.transcription_attempted = cst_encode_bool(
      apiObj.transcriptionAttempted,
    );
    wireObj.transcription = cst_encode_opt_box_autoadd_dart_transcription(
      apiObj.transcription,
    );
  }

  @protected
  bool cst_encode_bool(bool raw);

  @protected
  double cst_encode_f_32(double raw);

  @protected
  int cst_encode_i_16(int raw);

  @protected
  int cst_encode_i_32(int raw);

  @protected
  int cst_encode_u_32(int raw);

  @protected
  int cst_encode_u_8(int raw);

  @protected
  void cst_encode_unit(void raw);

  @protected
  void sse_encode_AnyhowException(
    AnyhowException self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_String(String self, SseSerializer serializer);

  @protected
  void sse_encode_bool(bool self, SseSerializer serializer);

  @protected
  void sse_encode_box_autoadd_dart_transcription(
    DartTranscription self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_dart_synthesized_audio(
    DartSynthesizedAudio self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_dart_transcription(
    DartTranscription self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_dart_transcription_segment(
    DartTranscriptionSegment self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_dart_vad_result(DartVadResult self, SseSerializer serializer);

  @protected
  void sse_encode_dart_voice_style(
    DartVoiceStyle self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_f_32(double self, SseSerializer serializer);

  @protected
  void sse_encode_i_16(int self, SseSerializer serializer);

  @protected
  void sse_encode_i_32(int self, SseSerializer serializer);

  @protected
  void sse_encode_list_String(List<String> self, SseSerializer serializer);

  @protected
  void sse_encode_list_dart_transcription_segment(
    List<DartTranscriptionSegment> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_dart_voice_style(
    List<DartVoiceStyle> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_f_32_loose(
    List<double> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_f_32_strict(
    Float32List self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_i_16_loose(
    List<int> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_i_16_strict(
    Int16List self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_u_8_loose(List<int> self, SseSerializer serializer);

  @protected
  void sse_encode_list_prim_u_8_strict(
    Uint8List self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_opt_String(String? self, SseSerializer serializer);

  @protected
  void sse_encode_opt_box_autoadd_dart_transcription(
    DartTranscription? self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_streaming_result(
    StreamingResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_u_32(int self, SseSerializer serializer);

  @protected
  void sse_encode_u_64(BigInt self, SseSerializer serializer);

  @protected
  void sse_encode_u_8(int self, SseSerializer serializer);

  @protected
  void sse_encode_unit(void self, SseSerializer serializer);

  @protected
  void sse_encode_usize(BigInt self, SseSerializer serializer);
}

// Section: wire_class

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import

/// generated by flutter_rust_bridge
class AudioRustLibWire implements BaseWire {
  factory AudioRustLibWire.fromExternalLibrary(ExternalLibrary lib) =>
      AudioRustLibWire(lib.ffiDynamicLibrary);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AudioRustLibWire(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AudioRustLibWire.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void store_dart_post_cobject(DartPostCObjectFnType ptr) {
    return _store_dart_post_cobject(ptr);
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
        'store_dart_post_cobject',
      );
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_available() {
    return _wire__crate__api__audio_buffer_available();
  }

  late final _wire__crate__api__audio_buffer_availablePtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__audio_buffer_available',
      );
  late final _wire__crate__api__audio_buffer_available =
      _wire__crate__api__audio_buffer_availablePtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_available_duration() {
    return _wire__crate__api__audio_buffer_available_duration();
  }

  late final _wire__crate__api__audio_buffer_available_durationPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__audio_buffer_available_duration',
      );
  late final _wire__crate__api__audio_buffer_available_duration =
      _wire__crate__api__audio_buffer_available_durationPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_clear() {
    return _wire__crate__api__audio_buffer_clear();
  }

  late final _wire__crate__api__audio_buffer_clearPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__audio_buffer_clear',
      );
  late final _wire__crate__api__audio_buffer_clear =
      _wire__crate__api__audio_buffer_clearPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_has_full_chunk() {
    return _wire__crate__api__audio_buffer_has_full_chunk();
  }

  late final _wire__crate__api__audio_buffer_has_full_chunkPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__audio_buffer_has_full_chunk',
      );
  late final _wire__crate__api__audio_buffer_has_full_chunk =
      _wire__crate__api__audio_buffer_has_full_chunkPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_read(int count) {
    return _wire__crate__api__audio_buffer_read(count);
  }

  late final _wire__crate__api__audio_buffer_readPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.UintPtr)>>(
        'frbgen_kivixa_wire__crate__api__audio_buffer_read',
      );
  late final _wire__crate__api__audio_buffer_read =
      _wire__crate__api__audio_buffer_readPtr
          .asFunction<WireSyncRust2DartDco Function(int)>();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_read_all() {
    return _wire__crate__api__audio_buffer_read_all();
  }

  late final _wire__crate__api__audio_buffer_read_allPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
        'frbgen_kivixa_wire__crate__api__audio_buffer_read_all',
      );
  late final _wire__crate__api__audio_buffer_read_all =
      _wire__crate__api__audio_buffer_read_allPtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_write_bytes(
    ffi.Pointer<wire_cst_list_prim_u_8_loose> bytes,
  ) {
    return _wire__crate__api__audio_buffer_write_bytes(bytes);
  }

  late final _wire__crate__api__audio_buffer_write_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__audio_buffer_write_bytes');
  late final _wire__crate__api__audio_buffer_write_bytes =
      _wire__crate__api__audio_buffer_write_bytesPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_write_i16(
    ffi.Pointer<wire_cst_list_prim_i_16_loose> samples,
  ) {
    return _wire__crate__api__audio_buffer_write_i16(samples);
  }

  late final _wire__crate__api__audio_buffer_write_i16Ptr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_i_16_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__audio_buffer_write_i16');
  late final _wire__crate__api__audio_buffer_write_i16 =
      _wire__crate__api__audio_buffer_write_i16Ptr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_i_16_loose>,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__audio_buffer_write_samples(
    ffi.Pointer<wire_cst_list_prim_f_32_loose> samples,
  ) {
    return _wire__crate__api__audio_buffer_write_samples(samples);
  }

  late final _wire__crate__api__audio_buffer_write_samplesPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_f_32_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__audio_buffer_write_samples');
  late final _wire__crate__api__audio_buffer_write_samples =
      _wire__crate__api__audio_buffer_write_samplesPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_f_32_loose>,
            )
          >();

  void wire__crate__api__audio_initialize_all(int port_) {
    return _wire__crate__api__audio_initialize_all(port_);
  }

  late final _wire__crate__api__audio_initialize_allPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
        'frbgen_kivixa_wire__crate__api__audio_initialize_all',
      );
  late final _wire__crate__api__audio_initialize_all =
      _wire__crate__api__audio_initialize_allPtr
          .asFunction<void Function(int)>();

  WireSyncRust2DartDco wire__crate__api__audio_module_health_check() {
    return _wire__crate__api__audio_module_health_check();
  }
